src/np222kk/dv507/a2/test/cases/positive/test_otherDetails.ofp
# test_otherDetails

void main() {       # Comment
    # I am a comment
    # if (a < b) {
    #   a = b;
    # }   

    if (true) { # Comment 

    }

    int i = 1; # Comment    
}