src/np222kk/dv507/a2/test/cases/negative/test_attributesaccess_02.ofp
void main() {

    int i = 1;
    int j = i.length;
}